--- a/src/main/resources/templates/styles.css
+++ b/src/main/resources/templates/styles.css
@@ -19,7 +19,7 @@ body {
 
 input {
     width: 100%;
-    padding: 10px;
+    padding: 10px 0 0 0;
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
