案件登録画面作成

--- a/src/main/resources/static/css/styles_main.css
+++ b/src/main/resources/static/css/styles_main.css
@@ -60,3 +60,13 @@ h1 {
     margin-bottom: 5px;
     border-radius: 4px;
 }
+
+.sidebar ul ul {
+    list-style-type: circle;
+    padding-left: 15px;
+}
+
+.sidebar ul ul li a {
+    font-size: 14px;
+}
+
